# minidblite

./: .gitignore  README.md  index.html  pyproject.toml  sitemap.xml
minidblite/: __init__.py  core.py  database.py  formatter.py  utils.py
tests/: test_basic.py
