[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minidblite"
version = "0.1.1"
description = "A lightweight, beginner-friendly SQLite wrapper for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Diyorbekw", email = "diyorbek0143@gmail.com" }
]
keywords = ["sqlite", "database", "orm", "beginner", "lightweight"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
"Homepage" = "https://github.com/diyorbekw/minidblite"
"Bug Tracker" = "https://github.com/diyorbekw/minidblite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["minidblite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["minidblite"]
omit = ["tests/*"]